--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,11 +14,15 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
-				</tr>
-
+                    <th></th>
+                </tr>
+                {% for customer in customers_info %}
+                    <tr>
+                        <td>{{ customer.name }}</td>
+                        <td><a href=" {% url 'customer' customer.id %}" target="_blank">view</a></td>
+                    </tr>
+                {% endfor %}
 			</table>
 		</div>
 	</div>
@@ -36,6 +40,15 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+                {% for order in orders_info %}
+                    <tr>
+                        <td>{{ order.product }}</td>
+                        <td>{{ order.date_created }}</td>
+                        <td>{{ order.status }}</td>
+                        <td><a href="#">update</a></td>
+                        <td><a href="#">delete</a></td>
+                    </tr>
+                {% endfor %}
 		
 			</table>
 		</div>
