--- a/templates/products.html
+++ b/templates/products.html
@@ -16,6 +16,13 @@
 							<th>Category</th>
 							<th>Price</th>
 						</tr>
+                        {% for product in prodcut_list %}
+                            <tr>
+                                <td>{{ product.name }}</td>
+                                <td>{{ product.category }}</td>
+                                <td>{{ product.price }}</td>
+                            </tr>
+                        {% endfor %}
 
 					</table>
 				</div>
