--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}" target="_blank">Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -45,8 +45,8 @@
                         <td>{{ order.product }}</td>
                         <td>{{ order.date_created }}</td>
                         <td>{{ order.status }}</td>
-                        <td><a href="#">update</a></td>
-                        <td><a href="#">delete</a></td>
+                        <td><a href=" {% url 'update_order' order.id %}" target="_blank">update</a></td>
+                        <td><a href="{% url 'delete_order' order.id %}" target="_blank">delete</a></td>
                     </tr>
                 {% endfor %}
 		
