--- a/templates/status.html
+++ b/templates/status.html
@@ -39,4 +39,30 @@
 			</div>
 		</div>
 	</div>
+
+    <div class="col">
+		<div class="col-md">
+			<div class="card text-center text-white  mb-3" id="orders-out-for-delivery">
+			  	<div class="card-header">
+			  		<h5 class="card-title">Out for Delivery</h5>
+			  	</div>
+			  	<div class="card-body">
+			    	<h3 class="card-title">{{ orders_out_for_delivery }}</h3>
+			  	</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="col">
+		<div class="col-md">
+			<div class="card text-center text-white  mb-3" id="orders-cancelled">
+			  	<div class="card-header">
+			  		<h5 class="card-title">Orders Cancelled</h5>
+			  	</div>
+			  	<div class="card-body">
+			    	<h3 class="card-title">{{ orders_cancelled }}</h3>
+			  	</div>
+			</div>
+		</div>
+	</div>
 </div>
