--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,12 +5,16 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+        {% if request.user.is_staff %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'product' %}">Products</a>
       </li>
+        {% endif %}
     </ul>
   </div>
+    <span class="text-white">Hello {{ request.user }}</span>
+    <span class="text-white"><a href="{% url 'logout' %}">Logout</a></span>
 </nav>
