--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,20 +1,50 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">Django CRUD</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+<nav class="navbar navbar-inverse navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="{% url 'home' %}">Django CRUD</a>
+    </div>
+    <ul class="nav navbar-nav">
         {% if request.user.is_staff %}
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'product' %}">Products</a>
-      </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'product' %}">Products</a>
+            </li>
+            <li class="nav-item dropdown dropleft">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="rounded" src="{{request.user.customer.profile_pic.url}}" height="25" width="25" >
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <p class="dropdown-item">Logged in as <br> <b> {{ request.user }} </b></p>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'profile_settings' %}">Settings</a>
+                <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                </div>
+            </li>
+            </ul>
+        {% else %}
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item dropdown dropleft">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img class="rounded" src="{{request.user.customer.profile_pic.url}}" height="25" width="25" >
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <p class="dropdown-item">Logged in as <br> <b> {{ request.user }} </b></p>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'profile_settings' %}">Settings</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </li>
+            </ul>
         {% endif %}
-    </ul>
   </div>
-    <span class="text-white">Hello {{ request.user }}</span>
-    <span class="text-white"><a href="{% url 'logout' %}">Logout</a></span>
 </nav>
+
+
+
+
+
+
