--- a/templates/register.html
+++ b/templates/register.html
@@ -120,7 +120,7 @@
 					</form>
 				</div>
 
-                {{ user_register_form.errors }}
+                {{ user_register_form.error_messages }}
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
