created custom user model.

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                             <form class="form" role="form" method="POST" action="" novalidate>
                                 {% csrf_token %}
                                 <div class="input-group mb-3">
-							        <input type="text" name="username" placeholder="Username" class="form-control">
+							        <input type="email" name="email" placeholder="Email" class="form-control">
 						        </div>
                                 <div class="input-group mb-2">
                                     <input type="password" name="password" placeholder="Password" class="form-control" >
