--- a/templates/index.html
+++ b/templates/index.html
@@ -51,13 +51,7 @@ to get the desired effect
   <!-- /.control-sidebar -->
 
   <!-- Main Footer -->
-  <footer class="main-footer">
-    <strong>Copyright &copy; <a href="https://github.com/HarshilPatel007/" target="_blank">HarshilPatel</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-      <a><b>Django</b>CRUD</a> <b>Version</b> 0.1 beta
-    </div>
-  </footer>
+    {% include 'components/footer.html' %}
 </div>
 <!-- ./wrapper -->
 
