--- a/templates/pages/customers.html
+++ b/templates/pages/customers.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>DjangoCRUD | Orders</title>
+  <title>DjangoCRUD | Customers</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,12 +36,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Your Orders</h1>
+            <h1>Customers</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">My Orders</li>
+              <li class="breadcrumb-item active">Customers</li>
             </ol>
           </div>
         </div>
@@ -54,35 +54,38 @@
         <div class="col-12">
           <div class="card">
             <div class="card-header">
-                <h3 class="card-title"> <b>{{ request.user.get_short_name }}</b>, here is your order(s) list with status.</h3>
+                <h3 class="card-title"> <b>{{ request.user }}</b>, here is all the customers details.</h3>
             </div>
             <!-- /.card-header -->
             <div class="card-body">
               <table id="example1" class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                  <th>Product</th>
-                  <th>Category</th>
-                  <th>Date Ordered</th>
-                  <th>Status</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Mobile No.</th>
+                  <th>Total Order(s)</th>
+                    <th>More Information</th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for order in orders %}
+                {% for customer in customers %}
                 <tr>
-                  <td>{{ order.product }}</td>
-                  <td>{{ order.product.category }}</td>
-                  <td>{{ order.product.date_created }}</td>
-                  <td>{{ order.status }}</td>
+                  <td>{{ customer.user.get_full_name }}</td>
+                  <td>{{ customer.email }}</td>
+                  <td>{{ customer.mobile_number }}</td>
+                  <td>{{ customer.order_set.count }}</td>
+                <td><a href="{% url 'customer_profile' customer.id %}" class="btn btn-info">View User Profile</a></td>
                 </tr>
                 {% endfor %}
                 </tbody>
                 <tfoot>
                 <tr>
-                  <th>Product</th>
-                  <th>Category</th>
-                  <th>Date Ordered</th>
-                  <th>Status</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Mobile No.</th>
+                  <th>Total Order(s)</th>
+                    <th>More Information</th>
                 </tr>
                 </tfoot>
               </table>
