--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -93,6 +93,11 @@
           <!-- /.col-md-6 -->
         </div>
         <!-- /.row -->
+
+
+          {% if request.user.is_staff %}
+
+          {% endif %}
       </div>
       <!-- /.container-fluid -->
     </div>
