--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -8,9 +8,9 @@
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{{request.user.customer.profile_pic.url}}" class="img-circle elevation-2" alt="User Image">
-        </div>
+{#        <div class="image">#}
+{#          <img src="{{request.user.customer.profile_pic.url}}" class="img-circle elevation-2" alt="User Image">#}
+{#        </div>#}
         <div class="info">
           <a href="#" class="d-block">{{ request.user.get_full_name }}</a>
         </div>
@@ -32,6 +32,12 @@
                     <a href="{% url 'customers' %}" class="nav-link">
                         <i class="nav-icon fas fa-users"></i>
                         <p>Customers</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'admin_order_list' %}" class="nav-link">
+                        <i class="nav-icon fas fa-cart-arrow-down"></i>
+                        <p>Orders</p>
                     </a>
                 </li>
             {% else %}
