--- a/templates/pages/order-list.html
+++ b/templates/pages/order-list.html
@@ -36,7 +36,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Your Orders</h1>
+            <h1>Orders</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -118,7 +118,7 @@
                   <td>{{ order.product.category }}</td>
                   <td>{{ order.product.date_created }}</td>
                   <td>{{ order.status }}</td>
-                <td>{{ order.customer.user.get_full_name }}</td>
+                <td>{{ order.customer.user.get_full_name }} <a href="{%  url 'customer_profile' order.customer.id  %}"> <i class="nav-icon fas fa-link"></i> </a></td>
                 </tr>
                 {% endfor %}
                 </tbody>
