--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -30,10 +30,26 @@
     <div class="card-body register-card-body">
       <p class="login-box-msg">Register a new account</p>
 
-      <form action="" method="post">
+      <form action="" method="post" enctype="multipart/form-data">
           {% csrf_token %}
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Full name">
+          <input type="text" class="form-control" name="first_name" placeholder="First name">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-user"></span>
+            </div>
+          </div>
+        </div>
+          <div class="input-group mb-3">
+          <input type="text" class="form-control" name="last_name" placeholder="Last name">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-user"></span>
+            </div>
+          </div>
+        </div>
+          <div class="input-group mb-3">
+          <input type="text" class="form-control" name="username" placeholder="Username">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-user"></span>
@@ -41,7 +57,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" name="email" placeholder="Email">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -49,7 +65,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" name="password1" placeholder="Password">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -57,10 +73,18 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Retype password">
+          <input type="password" class="form-control" name="password2" placeholder="Retype password">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+          <div class="input-group mb-3">
+          <input type="date" class="form-control ui-datepicker" name="date_of_birth" placeholder="Date of birth">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-calendar-alt"></span>
             </div>
           </div>
         </div>
@@ -81,18 +105,18 @@
         </div>
       </form>
 
-      <div class="social-auth-links text-center">
-        <p>- OR -</p>
-        <a href="#" class="btn btn-block btn-primary">
-          <i class="fab fa-facebook mr-2"></i>
-          Sign up using Facebook
-        </a>
-        <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i>
-          Sign up using Google+
-        </a>
-      </div>
-
+{#      <div class="social-auth-links text-center">#}
+{#        <p>- OR -</p>#}
+{#        <a href="#" class="btn btn-block btn-primary">#}
+{#          <i class="fab fa-facebook mr-2"></i>#}
+{#          Sign up using Facebook#}
+{#        </a>#}
+{#        <a href="#" class="btn btn-block btn-danger">#}
+{#          <i class="fab fa-google-plus mr-2"></i>#}
+{#          Sign up using Google+#}
+{#        </a>#}
+{#      </div>#}
+        <br>
       <a href=" {% url 'login' %}" class="text-center">I already have a account</a>
     </div>
     <!-- /.form-box -->
