--- a/templates/components/top-navbar.html
+++ b/templates/components/top-navbar.html
@@ -8,7 +8,7 @@
         <a href="{% url 'home' %}" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="{% url 'website_home_page' %}" class="nav-link" target="_blank">Visit Website</a>
       </li>
     </ul>
 
